<resources>
    <string name="app_name">ecommerce_app</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="server_connection_error">Server connection error</string>
    <string name="buy_now">Buy now!</string>
    <string name="samsung">Samsung</string>
    <string name="new_text">New</string>
    <string name="category">Category</string>
    <string name="best_seller">Best Seller</string>
    <string name="see_more">see more</string>
    <string name="price_discount">1045$</string>
    <string name="price_normal">1200$</string>
    <string name="samsung_note_20_ultra">Samsung Note 20 Ultra</string>
    <string name="plus">+</string>
    <string name="close">X</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter options</string>
    <string name="brand_filter">Brand</string>
    <string name="price_filter">Price</string>
    <string name="name_category">Category name</string>
    <string name="name_right_menu">right menu</string>
    <string name="zihuatanejo_gro">Zihuatanejo, Gro</string>

    <string-array name="brandNames">
        <item>Samsung</item>
        <item>Iphone</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
    </string-array>

    <string-array name="priceRange">
        <item>$0–$100</item>
        <item>$101-$300</item>
        <item>$301-$600</item>
        <item>$601-$1000</item>
    </string-array>

    <string-array name="sizeRange">
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 5.8 inches</item>
        <item>5.8 to 6.2 inches</item>
    </string-array>

</resources>